Separa o CSS em um arquivo externo

--- a/index.html
+++ b/index.html
@@ -4,93 +4,7 @@
 <head>
     <title>Carlos Anderson 2025</title>
     <meta charset="utf-8">
-
-    <style type="text/css">
-        /* Configuração padrão da página
-		-------------------------------*/
-        body,
-        html {
-            margin: 0;
-            font: 16px "Lato", sans-serif;
-            color: #444;
-            height: 100%;
-        }
-
-        .conteudo {
-            color: #777;
-            background-color: #f9f9f9;
-            ;
-            text-align: justify;
-            padding: 50px 80px;
-            line-height: 1.6;
-        }
-
-        h3 {
-            text-transform: uppercase;
-            color: #1a1a1a;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        /* Efeito Parallax
-		-------------------------------*/
-        .caixa1,
-        .caixa2,
-        .caixa3,
-        .caixa4,
-        .caixa5 {
-            position: relative;
-            border: 1px solid red;
-            height: 100%;
-            background-attachment: fixed;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-        .caixa1 {
-            background-image: url(img/trofel.png);
-        }
-
-        .caixa2 {
-            background-image: url(img/innova.png);
-        }
-
-        .caixa3 {
-            background-image: url(img/forcabruta-home.png);
-        }
-
-        .caixa4 {
-            background-image: url(img/forcabrutaunidades.png);
-        }
-
-        .caixa5 {
-            background-image: url(img/eu.png);
-        }
-
-        p {
-            margin-bottom: 25px;
-        }
-
-        .conteudo-titulo {
-            position: absolute;
-            left: 0;
-            top: 45%;
-            width: 100%;
-            text-align: center;
-        }
-
-        .conteudo-titulo span.titulo {
-            color: #fff;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 18px;
-            font-size: 28px;
-            letter-spacing: 6px;
-            text-transform: uppercase;
-
-        }
-    </style>
-
+   <link rel="stylesheet" href="estilo.css">
 </head>
 
 <body>
