Adiciona informações sobre o INNOVA Day

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="conteudo">
-        <h3>INNOVA Day 2025 – Finalista em Inovação</h3>
+        <h3>INNOVA Day 2025  Finalista em Inovação</h3>
         <p>O INNOVA Day é o evento anual de inovação promovido pelo Senac-DF, voltado para estudantes que desejam
             transformar ideias em soluções reais. Em sua terceira edição, o evento reuniu projetos criativos e com
             potencial de impacto na sociedade, envolvendo tecnologia, sustentabilidade, acessibilidade e
